# DAG-example

./: CMakeLists.txt  README.md
DAGExample/: CMakeLists.txt  app.hpp  gl_debug_callback.hpp  shader_helpers.cpp  shader_helpers.hpp  shader_sources.hpp
DAGExample/ColorCompression/ColorCompression/: BlockBuild.h  color_conversion.hpp  color_layout.hpp  ours.cu  ours_varbit.cpp  ours_varbit.h
DAGExample/DAG/DAG/: DAG.cpp  DAG.h
DAGExample/DAGConstructor/DAGConstructor/: DAGConstructor.cpp  DAGConstructor.cu  DAGConstructor.h  DAGConstructor_impl.cu  DAGConstructor_impl.h  Merger.cpp  Merger.h  cli_main.cpp
DAGExample/DAGLoader/DAGLoader/: DAGLoader.cpp
DAGExample/DAGTracer/DAGTracer/: DAGTracer.cu  DAGTracer.h
DAGExample/Voxelizer/Voxelizer/: Voxelizer.cpp  Voxelizer.h  voxelize.frag  voxelize.geom  voxelize.vert  voxelize_with_colors.frag
DAGExample/glTFLoader/glTFLoader/: glTFLoader.cpp
DAGExample/src/: app.hpp  my_exe.cpp  voxelize_and_merge.cpp  voxelize_and_merge.h
DAGExample/utils/utils/: Aabb.cpp  Aabb.h  CudaHelpers.h  DAG.cpp  DAG.h  disc_vector.hpp  glm_extensions.cpp  glm_extensions.h  morton.h  orientation.cpp  orientation.h  popcnt.h  shader_helpers.hpp  view.cpp  view.h
DAGExample/utils/utils/glTFLoader/: glTFLoader.h
